--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fvY-Cv-gog">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
@@ -14,26 +14,26 @@
             <objects>
                 <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vxH-dN-Qoj">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                                 <color key="backgroundColor" name="#1A1B22"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="200" id="jPS-FZ-jrd" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="320" height="200"/>
+                                        <rect key="frame" x="0.0" y="50" width="430" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jPS-FZ-jrd" id="H6G-nO-J6T">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="430" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="j8f-OO-dYw">
-                                                    <rect key="frame" x="16" y="4" width="288" height="192"/>
+                                                    <rect key="frame" x="16" y="4" width="398" height="192"/>
                                                     <color key="backgroundColor" name="#1A1B22"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E46-Zi-snG" userLabel="LikedButton">
-                                                    <rect key="frame" x="260" y="4" width="44" height="44"/>
+                                                    <rect key="frame" x="370" y="4" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="XdO-nG-oky"/>
                                                         <constraint firstAttribute="width" constant="44" id="zFU-38-aek"/>
@@ -43,7 +43,7 @@
                                                     <state key="normal" image="No Active"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAx-Nx-ww6" userLabel="LabelCell">
-                                                    <rect key="frame" x="24" y="173" width="87" height="15"/>
+                                                    <rect key="frame" x="24.000000000000007" y="172" width="101.66666666666669" height="16"/>
                                                     <attributedString key="attributedText">
                                                         <fragment content="27 августа 2022">
                                                             <attributes>
@@ -92,20 +92,136 @@
                             <constraint firstItem="vxH-dN-Qoj" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="fCv-j7-H9X"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="Unb-lt-tLM"/>
                     <connections>
                         <outlet property="tableView" destination="vxH-dN-Qoj" id="YMf-0f-Am5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="84.732824427480907" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="-1507" y="-232"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="bUa-Km-xaD">
+            <objects>
+                <tabBarController id="fvY-Cv-gog" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5HB-g7-RIW">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="CTI-Bg-qcr"/>
+                        <segue destination="FCW-aR-6IU" kind="relationship" relationship="viewControllers" id="dTH-Yh-1hs"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gKZ-kg-tgU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2277" y="43"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="HMY-pb-BG0">
+            <objects>
+                <viewController storyboardIdentifier="ProfileViewController" id="FCW-aR-6IU" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Xk6-B9-AYe">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="wpg-rm-7me">
+                                <rect key="frame" x="16" y="91" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="7xx-dS-CKH"/>
+                                    <constraint firstAttribute="width" secondItem="wpg-rm-7me" secondAttribute="height" multiplier="1:1" id="loY-eh-iJF"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="left" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kRz-8k-8kB" userLabel="Label Stack View">
+                                <rect key="frame" x="16" y="169" width="398" height="70"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Новикова" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rkw-Md-AQh">
+                                        <rect key="frame" x="0.0" y="0.0" width="235" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="kbQ-Su-H05"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="235" id="yAg-Br-Lr3"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" name="#FFFFFF"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWW-NP-AV6">
+                                        <rect key="frame" x="0.0" y="26" width="122.33333333333333" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="99" id="1Ff-4y-8J3"/>
+                                            <constraint firstAttribute="height" constant="18" id="ZCU-iw-QmD"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" name="#AEAFB4"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, world!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPb-Rn-HP3">
+                                        <rect key="frame" x="0.0" y="52" width="94.666666666666671" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="bJz-J5-BB7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" name="#FFFFFF"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qr8-8E-i0J">
+                                <rect key="frame" x="370" y="104" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="mcZ-L2-4GM"/>
+                                    <constraint firstAttribute="width" constant="44" id="vT8-2g-V0P"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="" image="Exit">
+                                    <attributedString key="attributedTitle"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapLogoutButton:" destination="FCW-aR-6IU" eventType="touchUpInside" id="kH3-2H-e6P"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="D6s-uh-bRV"/>
+                        <color key="backgroundColor" name="#1A1B22"/>
+                        <constraints>
+                            <constraint firstItem="wpg-rm-7me" firstAttribute="top" secondItem="D6s-uh-bRV" secondAttribute="top" constant="32" id="3hG-ec-LBT"/>
+                            <constraint firstItem="wpg-rm-7me" firstAttribute="leading" secondItem="D6s-uh-bRV" secondAttribute="leading" constant="16" id="PSA-cI-1cX"/>
+                            <constraint firstItem="D6s-uh-bRV" firstAttribute="trailing" secondItem="kRz-8k-8kB" secondAttribute="trailing" constant="16" id="SAq-dO-khD"/>
+                            <constraint firstItem="kRz-8k-8kB" firstAttribute="leading" secondItem="D6s-uh-bRV" secondAttribute="leading" constant="16" id="eYx-H1-ne6"/>
+                            <constraint firstItem="D6s-uh-bRV" firstAttribute="trailing" secondItem="kRz-8k-8kB" secondAttribute="trailing" constant="16" id="gSS-37-Tnq"/>
+                            <constraint firstItem="kRz-8k-8kB" firstAttribute="top" secondItem="wpg-rm-7me" secondAttribute="bottom" constant="8" id="gel-yT-bUY"/>
+                            <constraint firstItem="D6s-uh-bRV" firstAttribute="trailing" secondItem="qr8-8E-i0J" secondAttribute="trailing" constant="16" id="rxA-To-eme"/>
+                            <constraint firstItem="qr8-8E-i0J" firstAttribute="centerY" secondItem="wpg-rm-7me" secondAttribute="centerY" id="s9F-7F-FIk"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="0iK-M8-j2P"/>
+                    <connections>
+                        <outlet property="avatarImageView" destination="wpg-rm-7me" id="j2W-8I-Id9"/>
+                        <outlet property="descriptionLabel" destination="oPb-Rn-HP3" id="Gnf-xp-XGv"/>
+                        <outlet property="loginNameLabel" destination="IWW-NP-AV6" id="1ha-0h-67t"/>
+                        <outlet property="logoutButton" destination="qr8-8E-i0J" id="lMm-PU-bVy"/>
+                        <outlet property="nameLabel" destination="Rkw-Md-AQh" id="gJm-s7-uct"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wcm-ez-zrm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1507" y="456"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="1600" height="1059"/>
+        <image name="Exit" width="24" height="24"/>
         <image name="No Active" width="42" height="42"/>
+        <image name="Photo" width="70" height="70"/>
+        <image name="tab_editorial_active" width="30" height="30"/>
+        <image name="tab_profile_active" width="24" height="24"/>
         <namedColor name="#1A1B22">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="#AEAFB4">
+            <color red="0.68235294117647061" green="0.68627450980392157" blue="0.70588235294117652" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="#FFFFFF">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
