--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bBt-rB-8fA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fvY-Cv-gog">
     <device id="retina6_3" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -74,6 +74,7 @@
                                             <outlet property="cellImage" destination="j8f-OO-dYw" id="Ih8-jb-l4e"/>
                                             <outlet property="dateLabel" destination="sAx-Nx-ww6" id="Q6T-qE-MSp"/>
                                             <outlet property="likeButton" destination="E46-Zi-snG" id="Ce4-eS-aQz"/>
+                                            <segue destination="bBt-rB-8fA" kind="show" id="rtc-FI-UpX"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -110,7 +111,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="wD0-4f-aCd">
-                                <rect key="frame" x="0.0" y="62" width="402" height="778"/>
+                                <rect key="frame" x="0.0" y="106" width="402" height="685"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="g9Y-sA-hN2"/>
@@ -122,6 +123,7 @@
                             <constraint firstItem="g9Y-sA-hN2" firstAttribute="bottom" secondItem="wD0-4f-aCd" secondAttribute="bottom" id="vu7-TN-Vmg"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="D8N-BW-aCb"/>
                     <connections>
                         <outlet property="imageView" destination="wD0-4f-aCd" id="u7K-qU-lXp"/>
                     </connections>
