--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -115,7 +115,7 @@
                                 <rect key="frame" x="-20" y="-20" width="433" height="892"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="wD0-4f-aCd">
-                                        <rect key="frame" x="20" y="8" width="393" height="852"/>
+                                        <rect key="frame" x="20" y="20" width="393" height="864"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                 </subviews>
@@ -137,6 +137,14 @@
                                     <action selector="didTapBackButton" destination="bBt-rB-8fA" eventType="touchUpInside" id="dj8-fA-Tio"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Fe-yq-XBE">
+                                <rect key="frame" x="162" y="751" width="69" height="51"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Sharing"/>
+                                <connections>
+                                    <action selector="didTapShareButton:" destination="bBt-rB-8fA" eventType="touchUpInside" id="3gy-ty-cn6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="g9Y-sA-hN2"/>
                         <color key="backgroundColor" name="#1A1B22"/>
@@ -144,15 +152,19 @@
                             <constraint firstItem="0Xh-BN-fgt" firstAttribute="top" secondItem="g9Y-sA-hN2" secondAttribute="top" constant="11" id="87s-nh-gxo"/>
                             <constraint firstItem="EQ5-Lt-lFh" firstAttribute="top" secondItem="mEm-TD-Hjy" secondAttribute="top" constant="-20" id="KKh-mZ-bXw"/>
                             <constraint firstItem="0Xh-BN-fgt" firstAttribute="leading" secondItem="g9Y-sA-hN2" secondAttribute="leading" constant="9" id="LIY-eB-eJf"/>
+                            <constraint firstItem="3Fe-yq-XBE" firstAttribute="leading" secondItem="g9Y-sA-hN2" secondAttribute="leading" constant="162" id="Pk1-eH-VoR"/>
+                            <constraint firstItem="g9Y-sA-hN2" firstAttribute="bottom" secondItem="3Fe-yq-XBE" secondAttribute="bottom" constant="50" id="dgT-Db-i5R"/>
                             <constraint firstItem="EQ5-Lt-lFh" firstAttribute="leading" secondItem="g9Y-sA-hN2" secondAttribute="leading" id="gTL-0F-XdA"/>
                             <constraint firstItem="g9Y-sA-hN2" firstAttribute="trailing" secondItem="EQ5-Lt-lFh" secondAttribute="trailing" id="hQC-Ne-Hgx"/>
                             <constraint firstAttribute="bottom" secondItem="EQ5-Lt-lFh" secondAttribute="bottom" constant="-20" id="jae-bp-tfS"/>
+                            <constraint firstItem="g9Y-sA-hN2" firstAttribute="trailing" secondItem="3Fe-yq-XBE" secondAttribute="trailing" constant="162" id="xrZ-7O-4p9"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="D8N-BW-aCb"/>
                     <connections>
                         <outlet property="imageView" destination="wD0-4f-aCd" id="u7K-qU-lXp"/>
                         <outlet property="scrollView" destination="EQ5-Lt-lFh" id="r8A-q8-9f5"/>
+                        <outlet property="sharing" destination="3Fe-yq-XBE" id="O4s-IA-jFt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NmB-ZA-78R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -166,7 +178,8 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5HB-g7-RIW">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="selectedImageTintColor" name="#1A1B22"/>
+                        <color key="barTintColor" name="#FFFFFF80(50%)"/>
+                        <color key="selectedImageTintColor" name="#FFFFFF"/>
                         <tabBarAppearance key="standardAppearance">
                             <color key="backgroundColor" name="#1A1B22"/>
                         </tabBarAppearance>
@@ -277,6 +290,7 @@
         <image name="Exit" width="24" height="24"/>
         <image name="No Active" width="42" height="42"/>
         <image name="Photo" width="70" height="70"/>
+        <image name="Sharing" width="51" height="51"/>
         <image name="tab_editorial_active" width="30" height="30"/>
         <image name="tab_profile_active" width="24" height="24"/>
         <namedColor name="#1A1B22">
